# django-2-yersmad

./: README.md  db.sqlite3  pyproject.toml  schema.yml
hw_2/: settings.py  urls.py
news/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_comment.py  0003_alter_comment_created_at_alter_news_created_at.py  0004_news_has_comments.py  0005_alter_news_has_comments.py  0006_alter_news_has_comments.py  0007_alter_news_has_comments.py
news/templates/news/: base.html  comments.html  detail.html  index.html  news.html  news_by_id.html  post_comment.html  post_news.html  update_news.html
news/templates/registration/: login.html  sign_up.html
